<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Lumind</string>
    <string name="title_fragment_calendar">Calendar</string>
    <string name="month_short_x_leap">%s(L)</string>
    <string name="solar_to_lunar">Converting from Solar to Lunar</string>
    <string name="lunar_to_solar">Converting from Lunar to Solar</string>
    <string name="title_fragment_reminder_add">Add Reminder</string>
    <string name="title_fragment_reminder_edit">Edit Reminder</string>
    <string name="form_reminder_day">Day</string>
    <string name="form_reminder_month">Month</string>
    <string name="form_reminder_create_monthly">Monthly</string>
    <string name="form_reminder_create_annually">Once a year</string>
    <string name="form_reminder_name">Reminder</string>
    <string name="form_reminder_note">Note</string>
    <string name="form_reminder_lunar">Lunar</string>
    <string name="form_reminder_enabled">Enabled</string>
    <string name="form_reminder_when0">Remind on the date</string>
    <string name="form_reminder_when1">Remind the day before</string>
    <string name="form_reminder_when7">Remind a week prior</string>
    <string name="form_reminder_added">Reminder added!</string>
    <string name="form_reminder_updated">Reminder saved!</string>
    <string name="form_reminder_error">Cannot save reminder, please try again later.</string>
    <string name="title_fragment_reminders">Reminders</string>
    <string name="reminder_lunar_day_x">Lunar day %d</string>
    <string name="reminder_lunar_date_x" translatable="false">%s</string>
    <string name="reminder_lunar_date_x_leap">%s (leap)</string>
    <string name="reminder_default_daily_first">The 1st</string>
    <string name="reminder_default_daily_fifteenth">The 15th</string>
    <string name="reminder_default_vesak">Vesak</string>
    <string name="remind_monthly_when_x">Remind every month %s</string>
    <string name="remind_annually_when_x">Remind once a year %s</string>
    <string name="remind_when_x_y">%s and %s</string>
    <string name="remind_when_x_y_z">%s, %s and %s</string>
    <string name="remind_when0">on the date</string>
    <string name="remind_when1">the day before</string>
    <string name="remind_when7">a week prior</string>
    <string name="next_occurrence_date_x_when_y" translatable="false">%s (%s)</string>
    <string name="next_occurrence_when_today">today</string>
    <string name="next_occurrence_when_tomorrow">tomorrow</string>
    <string name="next_occurrence_when_day_after_tomorrow">day after tomorrow</string>
    <string name="next_occurrence_when_in_a_week">in a week</string>
    <string name="reminder_has_been_deleted">Reminder has been removed.</string>
    <string name="reminder_undelete">Undo</string>
    <string name="title_fragment_settings">Settings</string>
    <string name="pref_remind">Daily Reminder</string>
    <string name="pref_language">Language</string>
    <string name="pref_language_summary" translatable="false">%s</string>
    <string name="reminder_ntf_channel_name">Daily Reminder</string>

    <string-array name="reminder_action_codes" tools:ignore="MissingTranslation">
        <item>view</item>
        <item>edit</item>
        <item>delete</item>
    </string-array>
    <string-array name="reminder_actions">
        <item>View in calendar</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string-array name="pref_language">
        <item>Default (English)</item>
        <item>English</item>
        <item>Tiếng Việt</item>
    </string-array>
    <string-array name="pref_language_values">
        <item>default</item>
        <item>en</item>
        <item>vi</item>
    </string-array>

    <plurals name="x_days">
        <item quantity="one">a day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="x_months">
        <item quantity="one">a month</item>
        <item quantity="other">%d months</item>
    </plurals>
</resources>
