<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <import type="com.daohoangson.lumind.R" />

        <variable
            name="reminder"
            type="com.daohoangson.lumind.model.Reminder" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/listItemPadding">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="@dimen/listItemPadding"
                android:layout_marginRight="@dimen/listItemPadding"
                android:contentDescription="@string/form_reminder_lunar"
                android:src="@drawable/ic_moon_colored"
                tools:src="@drawable/ic_moon_colored" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/icon"
                android:layout_toRightOf="@id/icon"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{reminder.getNameForShow(context)}"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    tools:text="@string/form_reminder_name" />

                <TextView
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    app:next_occurrence_text="@{reminder}"
                    tools:text="@string/next_occurrence_date_x_when_y" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    app:remind_when_text="@{reminder}"
                    tools:text="@string/remind_monthly_when_x" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/enabled"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:checked="@{reminder.enabled}"
                android:contentDescription="@string/form_reminder_enabled"
                tools:checked="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</layout>