<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.TextUtils" />

        <import type="android.view.View" />

        <import type="com.daohoangson.lumind.R" />

        <variable
            name="reminder"
            type="com.daohoangson.lumind.model.Reminder" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activityVerticalMargin"
        android:paddingLeft="@dimen/activityHorizontalMargin"
        android:paddingRight="@dimen/activityHorizontalMargin"
        android:paddingTop="@dimen/activityVerticalMargin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.daohoangson.lumind.fragment.ReminderEditFragment">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/create_monthly"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:enabled="@{!reminder.monthly}"
                android:text="@string/form_reminder_create_monthly" />

            <Button
                android:id="@+id/create_annually"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:enabled="@{reminder.monthly}"
                android:text="@string/form_reminder_create_annually" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_reminder_day"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:text="@={`` + reminder.date.lunarDay}" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/month"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:contentDescription="@string/form_reminder_month"
                android:entries="@{reminder.date.lunarMonths}"
                android:selectedItemPosition="@={reminder.date.lunarMonthRaw}"
                android:visibility="@{!reminder.monthly ? View.VISIBLE : View.GONE}" />

        </LinearLayout>

    </LinearLayout>
</layout>